# bitcoin-fee-model

./: .gitignore  Cargo.toml  LICENSE  Readme.md  build.rs
.github/workflows/: test.yml
examples/: estimate.rs
models/: test_model.cbor
models/20210217-142524/: model.cbor
models/20210217-154050/: model.cbor
models/20210221-220141/: model.cbor
models/20210221-220251/: model.cbor
models/20210408-202237/: model.cbor  test_vector.cbor
models/20210408-202241/: model.cbor  test_vector.cbor
models/20211027-180849/: model.cbor  test_vector.cbor
models/20211027-180925/: model.cbor  test_vector.cbor
src/: error.rs  fee_bucket.rs  lib.rs  matrix.rs  matrix_serde.rs  model_data.rs  process_blocks.rs
