[package]
name = "bitcoin-fee-model"
version = "0.1.0"
authors = ["Riccardo Casatta <riccardo@casatta.it>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version="1.0.123", features=["derive"] }
serde_cbor = "0.11.1"
chrono = "0.4"

[dev-dependencies]
float-cmp = "0.8.0"
