[package]
name = "bitcoin-fee-model"
version = "0.1.0"
authors = ["Riccardo Casatta <riccardo@casatta.it>"]
edition = "2018"

[dependencies]
chrono = "0.4"
bitcoin = { version = "^0.26", optional = true }

[dev-dependencies]
serde_cbor = "0.11"
serde = { version = "1.0", features = ["derive"] }

[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11"

[features]
default = []
use-bitcoin = ["bitcoin"]

[profile.release]
lto = true
